# Aerial-Manipulator

./: README.md
aerial/: CMakeLists.txt  package.xml
aerial/config/: joint_limits.yaml  kinematics.yaml
aerial/description/: aerial.urdf  aerial.xacro  aerial_generic_odometry_sensor.gazebo  kit_c_base.xacro
aerial/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quad_moveit_controller_manager.launch.xml  quad_moveit_sensor_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aerial_manipulator/: CMakeLists.txt  package.xml
aerial_manipulator/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  quad.srdf
aerial_manipulator/launch/: aerial_manipulator.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quad_moveit_controller_manager.launch.xml  quad_moveit_sensor_manager.launch.xml  run_benchmark_ompl.launch  (+4 more)
balsa_arm/: balsa_arm_origin.urdf  force_feedback.cc
my_gripper/: aerial_base.xacro  aerial_generic_odometry_sensor.gazebo  aerial_kinect.xacro  my_gripper.xacro  simple_gripper.sdf  simple_gripper.urdf
new/: CMakeLists.txt  package.xml
new/hector_control/: CMakeLists.txt  package.xml  plugin.xml
quad_3dnav/: package.xml
simple_mobile_manipulator/: manipulator.sdf
(+64 files in other folders)
