<?xml version="1.0"?>
<package>
  <name>hector</name>
  <version>0.0.0</version>
  <description>The hector package</description>

 
  <maintainer email="medhijk@mail.uc.edu">Jishu Medhi</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hector_description</run_depend>
  <run_depend>hector_home</run_depend>
  <run_depend>hector_gazebo</run_depend>
  <run_depend>hector_control</run_depend>
  <run_depend>hector_listener</run_depend>

  <export><metapackage/></export>

</package>
